# color-analysis

./: .gitignore  ARCHITECTURE.md  MEDIAPIPE_EXPLANATIONS.md  README.md  initial_prompt.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  Dockerfile  Dockerfile.worker  alembic.ini  openapi.json  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_session_reliability_float.py  0003_audit_trace_surrogate_pk.py
apps/api/scripts/: debug_hair_mask.py  export_openapi.py
apps/api/src/color_analysis/: __init__.py  config.py  main.py
apps/api/src/color_analysis/api/: admin.py  analysis.py  deps.py  errors.py  photos.py  sessions.py
apps/api/src/color_analysis/core/: analysis_service.py  result_formatter.py  session_service.py
apps/api/src/color_analysis/cv/: __init__.py  __main__.py  aggregate.py  classifier.py  decode.py  features.py  landmarks.py  pipeline.py  quality.py  regions.py  scorecard.py  types.py  white_balance.py
apps/api/src/color_analysis/db/: __init__.py  base.py
apps/api/src/color_analysis_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tests/api/: test_health.py  test_photo_validation.py
apps/api/tests/core/: test_analysis_service.py  test_result_formatter.py
apps/api/tests/cv/: helpers.py  test_aggregate.py  test_decode.py  test_features.py  test_landmarks.py  test_pipeline_end_to_end.py  test_quality.py  test_regions.py  test_white_balance.py
apps/api/tests/storage/: test_storage.py
apps/api/tests/workers/: test_analyze.py
(+49 files in other folders)
